CH-1100 by Zarabadoo: Fix misalignment of count

--- a/src/css/acquia_lift.navbar.scss
+++ b/src/css/acquia_lift.navbar.scss
@@ -271,7 +271,7 @@
       }
     }
 
-    .acquia-lift-option-sets-list .acquia-lift-personalize-type-count {
+    .acquia-lift-option-sets-list .acquia-lift-personalize-type-count:not(.acquia-lift-empty) {
       position: relative;
       top: -.2em;
     }
